// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbItem.vue 检测 vue 路由跳转快照是否一样。 1`] = `
<div
  class="w-breadcrumb"
>
  <span
    class="w-breadcrumb-item"
  >
    <span
      class="w-breadcrumb-item-link"
    >
      vue 路由跳转
    </span>
     
    <i
      class="w-breadcrumb-item-separator"
    >
      /
    </i>
  </span>
</div>
`;

exports[`BreadcrumbItem.vue 检测新标签页面跳转快照是否一样。 1`] = `
<div
  class="w-breadcrumb"
>
  <span
    class="w-breadcrumb-item"
  >
    <span
      class="w-breadcrumb-item-link"
    >
      新标签页面跳转
    </span>
     
    <i
      class="w-breadcrumb-item-separator"
    >
      /
    </i>
  </span>
</div>
`;

exports[`BreadcrumbItem.vue 检测本页面跳转快照是否一样。 1`] = `
<div
  class="w-breadcrumb"
>
  <span
    class="w-breadcrumb-item"
  >
    <span
      class="w-breadcrumb-item-link"
    >
      本标签页面跳转
    </span>
     
    <i
      class="w-breadcrumb-item-separator"
    >
      /
    </i>
  </span>
</div>
`;
